[main-private] added authorization token support to the ConfigService
